--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <body>
     <div class="container">
-        <h1 class="animated-text">Welcome to my GitHub Page!</h1>
+        <h1 class="animated-text">Welcome to my<br>GitHub Page!</h1>
     </div>
 </body>
 
